[gd_scene load_steps=3 format=3 uid="uid://ylhg8nsfxvh4"]

[ext_resource type="Script" uid="uid://ci7h2lxxpwrnq" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="FontFile" uid="uid://cqpbpdx57k3fh" path="res://asset/fonts/PixelOperator8-Bold.ttf" id="1_4rlqw"]

[node name="main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4rlqw")
theme_override_font_sizes/font_size = 48
text = "FreeFall"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="StartButton" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4rlqw")
theme_override_font_sizes/font_size = 24
text = "開始遊戲"

[node name="SettingsButton" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4rlqw")
theme_override_font_sizes/font_size = 24
text = "遊戲設置"

[node name="QuitButton" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4rlqw")
theme_override_font_sizes/font_size = 24
text = "退出遊戲"

[connection signal="pressed" from="UI/Control/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
